# Prompt_Caching_Foundations

./: .gitignore  Outline.md  READING_NOTES.md  README.md
conversation-memory-lab/: README.md  app.py  benchmark_memory.py  benchmark_recovery.py  logs.jsonl  memory_store.py  metrics.py  prom_metrics.py  prometheus.yml  prompt_builder.py  pyproject.toml  recovery.py  warmup.py
eviction-lab/: README.md  benchmark_eviction.py  benchmark_eviction_semantic.py  cache_policies.py  cache_store.py  main.py  pyproject.toml  scenarios.py  scenarios_semantic.py  ttl_lab.py  vector_utils.py
llama-cpp-cache-lab/: README.md  analyze_results.py  benchmark_llama_cpp.py  prompts.py  pyproject.toml
llm-foundations/: README.md  analyze_benchmark.py  basic-example-ttft.py  basic-example.py  benchmark.py  pyproject.toml  token_utils.py
prefix-prompt/: README.md  app.py  benchmark_prompt_versions.py  logs.jsonl  prompt_lab.py  prompt_version_benchmark.csv  pyproject.toml  token_utils.py
redis-cache-lab/: README.md  analyze_results.py  app.py  benchmark_exact_cache.py  prompt_utils.py  pyproject.toml
redisvl-semantic-cache-lab/: README.md  analyze_results.py  app.py  benchmark_semantic_cache.py  pyproject.toml  semantic_cache_utils.py
retrieval-cache-lab/: README.md  answer.py  benchmark.py  cache_keys.py  cache_policy.py  cache_store.py  cache_wrappers.py  chunking.py  compress.py  config.py  dedupe.py  doc_store.py  embeddings.py  ingest.py  memory.py  normalize.py  pipeline.py  pyproject.toml  redis_client.py  rerank.py  sample_doc.txt  scenarios.py  scenarios_freshness.py
(+6 files in other folders)
