[project]
name = "conversation-memory-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "redisvl>=0.16.0",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
]
